--- a/marryMe/css/index.css
+++ b/marryMe/css/index.css
@@ -1,4 +1,5 @@
 /* main */
+@import url(animate.css);
 body{  background: url("../images/index/bg_01.png") repeat top center; background-size: 100% auto;  }
 .wrap-content { padding: 40px 0; width: 100%;  max-width: 100vw; overflow: hidden; margin: 0 auto; background: url("../images/index/bg_00.png") no-repeat top center; background-size: 100% auto;}
 .wrap-content img{ width: 100%; }
@@ -19,7 +20,7 @@ img.mob{display: none;}
 .subtitle_box .subtitle_info{ float: left; width: 68%; position: relative; height: 100%;}
 .subtitle_box .the_date p.day{ font-size: 40px; font-weight: bold; position: absolute; top:calc(44% - 30px); left: 55%; color: #bc7c38; }
 
-.subtitle_box .ill_01{ float: right; width: 29%; position: absolute; bottom: 0; right: 0;}
+.subtitle_box .ill_01{ float: right; width: 27%; position: absolute; bottom: 0; right: 0;}
 
 .form_box{ width: 100%; border-radius: 50px; border: 8px solid #fff; margin: 0 auto; box-shadow: 0 5px 5px rgb(181 159 167 / 22%); padding-bottom: 50px; position: relative;}
 .form_box .w50{position: relative; float: left;width: 50%; padding: 20px; }
@@ -134,6 +135,9 @@ img.mob{display: none;}
 @media screen and (device-aspect-ratio: 4/3) {
     .main_KV {width: 100%; }
 }
+@media (max-width:1460px){
+    .main_KV, .contents_box { max-width: 1000px;}
+}
 
 @media (max-width:1400px){
     .main_KV .teacher{ top: 20px; width: 32%; left: -6%; }
@@ -150,6 +154,9 @@ img.mob{display: none;}
     .result_contents .fraction_box{width: 220px; height: 220px;}
     .result_contents .fraction_box p{ font-size: 70px; }
     .result_contents .fraction_box::after{ top: -20px; width: 190px; }
+}
+@media (max-width:1280px){
+    .main_KV, .contents_box { max-width: 800px;}
 }
 @media (max-width:1000px){
     .main_KV .teacher{ top: 20px; width: 32%; left: -3%; }
