--- a/2021cwlf-2/css/event-style.css
+++ b/2021cwlf-2/css/event-style.css
@@ -1,9 +1,5 @@
 @charset "utf-8";
 /* CSS Document */
-/*@import url(animate.css);
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playball&family=Roboto&display=swap');*/
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 blockquote, q { quotes: none; }
@@ -19,7 +15,6 @@ img { vertical-align: middle; }
 *:first-child + html .clearfix { min-height: 1%; }
 
 body, h1, h2, h3, h4, h5, h6, p, select, input, textarea, button { font-family: 'Noto Sans TC', 'Arial', '微軟正黑體', '新細明體', 'sans-serif'; font-weight: normal; color: #333; }
-/*p { font-size: 15px; }*/
 a { cursor: pointer; text-decoration: none; outline: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
 a:hover { text-decoration: none; }
 *:link, *:visited, *:hover, *:active, *:focus, * { border: none; outline: none; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
@@ -95,22 +90,17 @@ a:hover { text-decoration: none; }
 	#ticket .col-5{ max-width: 100% !important; flex: initial !important; text-align: center; }
 	#ticket .col-7{ max-width: 100% !important; flex: initial !important;}
 }
-@media (max-width:750px) {
-}
-@media (max-width:600px) {
-}
-@media (max-width:550px) {
-}
 @media (max-width:500px) {
+	.buy{padding: 0;}
+	.ticket, .about{ padding-top: 1rem; }
+	.buy-content .best::before{ right: 0; top: -4rem;width: 33vw;}
+	.about-content .about-pic-content .about-pic{ margin-bottom: 0; }
+	.about-content .about-pic-content2{ padding-top: 0; }
+	.buy-link a{ width: 42%; }
+	#ticket .col-5{max-width: 70% !important; margin: 0 auto;}
+	.qa .sun-title::before{ bottom: -22px;}
+	.qa .sun-title::after{bottom: -23px;}
 }
 @media (max-width:450px) {
 	.navbar-brand{ width: 90px;}
-}
-@media (max-width:400px) {
-}
-@media (max-width:375px) {
-}
-@media (max-width:365px) {
-}
-@media (max-width:320px) {
 }
