更新活動葉demo

--- a/2021cwlf-2/css/event-style.css
+++ b/2021cwlf-2/css/event-style.css
@@ -56,15 +56,23 @@ a:hover { text-decoration: none; }
 .buy-content .best{ font-size: 16px; border-top: 1px dashed #ffffff; padding-top: 20px; position: relative; }
 .buy-content .best::before{content:""; position: absolute; width: 204px; height: 177px; right: -3rem; top: -6rem; z-index: 1; background: url(../images/img_clothes_pink.png) center center no-repeat; background-size: contain; }
 .buy-content .pink{ color: #EA6580; }
-.mob{ display: none; }
+
+.mob, .main-mob{ display: none; }
 .mob .top-title{ text-align: center; }
 
 /*==== RWD ====*/
+@media (max-width:1600px) {
+	.banner{ background-size: cover;}
+	.about{ padding-top: 3rem; }
+	.about .bg_wave{ display: none; }
+}
+@media (max-width:1400px) {
+	.banner .flexslider .slides{ width: 70%; }
+}
 @media (max-width:1200px) {
 	.contents-box{ width:95%; }
 }
 @media (max-width:1100px) {
-	.banner { background: url(../images/banner-bg-s.png) center top no-repeat;}
 	.about-content .about-pic-content2 .w50:last-child{ max-width: 46%; padding-top: 0rem; padding-bottom: 4rem;}
 	.buy{ position: relative; padding: 3rem 0 3rem;}
 	.buy .page-header{position: absolute; top: 5.5rem; left: 0; text-align: center;}
@@ -85,7 +93,14 @@ a:hover { text-decoration: none; }
 	.navbar-brand{ width: 120px; }
 	.navbar-brand{ position: relative;z-index: 5; }
 	.navbar-collapse { background-color: #F5F6F8;}
+
+	.main-pc{ display: none; }
+	.main-mob{ display: block; }
+	.banner { background: url(../images/banner-bg-s.png) center top no-repeat #F5F6F8; background-size: cover;}
+	.banner .flexslider .slides{ width: 75%; }
+	.about .bg_wave{ display: block; }
 }
+
 @media (max-width:850px) {
 	.about-content .about-pic-content2 .w50:last-child{ float: left; width: 100%; max-width: 100%; }
 	.about-content .about-pic-content2 .about-pic{ width: 80%; margin-bottom: 1rem; }
@@ -106,5 +121,8 @@ a:hover { text-decoration: none; }
 	.qa .sun-title::after{bottom: -23px;}
 }
 @media (max-width:450px) {
+	.banner .flexslider .slides{ width: 95%;}
 	.navbar-brand{ width: 90px;}
+	.banner{ padding: 2rem 0 0 0; }
+	.about .bg_wave{ top: -2px; }
 }
