--- a/2021cwlf/css/style.css
+++ b/2021cwlf/css/style.css
@@ -137,7 +137,8 @@ img {
 \*------------------------------------*/
 header {
   /*background: url(../images/header-bg.png) center top repeat-x transparent;*/
-  height: 100px;
+  background-color: #ffffff;
+  min-height: 100px;
 }
 
 header.open {
@@ -362,9 +363,10 @@ header.open {
 /*------------------------------------*\
     BANNER
 \*------------------------------------*/
+
 .banner {
-  background: url(../images/banner-bg.png) center top no-repeat;
-  /*background-size: cover;*/
+  background: url(../images/banner-bg.png) center top no-repeat #F5F6F8;
+  
   padding: 11rem 0 6.5rem 0;
 }
 
@@ -395,7 +397,9 @@ header.open {
 .banner .flexslider .slides img {
   width: auto;
 }
-
+@media (min-width: 1920px) {
+  /*.banner { background-size: cover;}*/
+}
 @media (min-width: 992px) {
   .banner .flexslider .slides {
     max-width: 1120px;
@@ -602,7 +606,6 @@ section ol li {
 
 section .page-header {
   text-align: center;
-  /*margin-bottom: 5rem;*/
 }
 
 section::after {
@@ -1024,7 +1027,7 @@ section::after {
 
 @media (min-width: 1200px) {
   .ticket {
-    padding: 5rem 0 5rem;
+    padding: 3rem 0 5rem;
   }
   .ticket-txt {
     -webkit-box-align: start;
@@ -1100,7 +1103,7 @@ section::after {
 }
 
 .qa .page-header {
-  /*margin-bottom: 4rem;*/
+  margin-top: -7rem;
 }
 
 .qa .accordion {
@@ -1300,7 +1303,7 @@ section::after {
 
 @media (min-width: 768px) {
   .partner {
-    padding: 2rem 0 2rem;
+    padding: 1.5rem 0 2rem;
   }
   .partner-content a {
     padding: 0 2rem;
